[gd_scene load_steps=16 format=3 uid="uid://ckbhp0erdge82"]

[ext_resource type="Script" path="res://Characters/base/PlayerCharacterBase.gd" id="1_c23e2"]
[ext_resource type="Script" path="res://Characters/base/components/HealthComponent.gd" id="1_xatnc"]
[ext_resource type="Texture2D" uid="uid://bbbayuoo5h5v1" path="res://assets/Peri.png" id="2_sywti"]
[ext_resource type="Script" path="res://Characters/animated_sprite_2d.gd" id="3_d2oiq"]
[ext_resource type="Script" path="res://Characters/base/components/UserMovementComponent.gd" id="4_86qdj"]
[ext_resource type="Script" path="res://Characters/base/components/AttackComponent.gd" id="5_n2rma"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2vfve"]
atlas = ExtResource("2_sywti")
region = Rect2(865, 0, 78, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_neuop"]
atlas = ExtResource("2_sywti")
region = Rect2(943, 0, 78, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kund0"]
atlas = ExtResource("2_sywti")
region = Rect2(709, 128, 78, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kshn"]
atlas = ExtResource("2_sywti")
region = Rect2(787, 128, 78, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnrtj"]
atlas = ExtResource("2_sywti")
region = Rect2(865, 128, 78, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_b2fr1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vfve")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_neuop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kund0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kshn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnrtj")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mu6b"]
resource_name = "CharacterHitbox"
size = Vector2(43.5, 73)

[sub_resource type="Animation" id="Animation_jr841"]
resource_name = "idle"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8j8ti"]
_data = {
"idle": SubResource("Animation_jr841")
}

[node name="PlayerCharacterBase" type="CharacterBody2D" node_paths=PackedStringArray("healthNode", "movementNode", "attackNode")]
collision_mask = 4
script = ExtResource("1_c23e2")
healthNode = NodePath("HealthComponent")
movementNode = NodePath("UserMovementComponent")
attackNode = NodePath("AttackComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-15.5, -26)
scale = Vector2(0.602564, 0.59375)
sprite_frames = SubResource("SpriteFrames_b2fr1")
animation = &"walk_right"
frame = 1
frame_progress = 0.731372
script = ExtResource("3_d2oiq")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-15.75, -24.5)
shape = SubResource("RectangleShape2D_3mu6b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8j8ti")
}

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_xatnc")

[node name="UserMovementComponent" type="Node" parent="."]
script = ExtResource("4_86qdj")

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("5_n2rma")
